FIx contrast error

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
   font-family: sans-serif;
 }
 
+label {
+  display: none;
+}
+
 #elaborate {
   background-image: url(img/header-shapes-mobile.svg);
   background-repeat: no-repeat;
